@@ -6,6 +6,7 @@ public class MainLoopRunner implements Runnable {
 
     private Integer jmxport;
     private Integer rmiport;
+    private Main main;
 
     public MainLoopRunner(Integer jmxport, Integer rmiport) {
         this.jmxport = jmxport;
@@ -14,7 +15,12 @@ public class MainLoopRunner implements Runnable {
 
     public void run() {
         String[] args = {"-jmxport", jmxport.toString(), "-rmiport", rmiport.toString()};
-        new Main().start(args);
+        main = new Main();
+        main.start(args);
+    }
+
+    public void stop() {
+        main.stop();
     }
 
 }
